<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/superHeroImage"
            android:layout_width="100dp"
            android:layout_height="130dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/super_hero_image" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toEndOf="@id/superHeroImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_example" />

        <TextView
            android:id="@+id/raceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@id/nameText"
            app:layout_constraintTop_toBottomOf="@id/nameText"
            tools:text="@string/text_example" />

        <TextView
            android:id="@+id/publisherText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/nameText"
            app:layout_constraintBottom_toBottomOf="@id/superHeroImage"
            tools:text="@string/publisher" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

