<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clickToExpand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expandableTitle"
            style="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expandable_default_text" />

        <ImageView
            android:id="@+id/expandableIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_up"
            android:contentDescription="@string/expandable_icon_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/expandableArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/attributeOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            
            <TextView
                android:id="@+id/attributeOneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" 
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            
            <TextView
                android:id="@+id/attributeOneContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attributeTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            
            <TextView
                android:id="@+id/attributeTwoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" 
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            
            <TextView
                android:id="@+id/attributeTwoContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout> 
        <LinearLayout
            android:id="@+id/attributeThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            
            <TextView
                android:id="@+id/attributeThreeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" 
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            
            <TextView
                android:id="@+id/attributeThreeContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attributeFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            
            <TextView
                android:id="@+id/attributeFourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" 
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            
            <TextView
                android:id="@+id/attributeFourContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attributeFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            
            <TextView
                android:id="@+id/attributeFiveTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" 
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            
            <TextView
                android:id="@+id/attributeFiveContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attributeSix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/attributeSixTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/attributeSixContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>